<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won&apos;t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won&apos;t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won&apos;t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won&apos;t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won&apos;t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="action_donation">Unlimited TSmobile</string>
    <string name="action_facebook">Community FB</string>
    <string name="action_settings">Rate App</string>
    <string name="app_name">TSmobile</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner">ca-app-pub-7983017215405047/2451896819</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="but_again_main">Again</string>
    <string name="but_send_chat">Send</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="ex_chat_bubble">Hello chat!</string>
    <string name="help_text_a">1) Mobile device and your computer with TS must be in the same Network Area. You have to use WiFi to connect to the same router.\n</string>
    <string name="help_text_ab">\nRemember to keep connection in good condition! \nAll kinds of Torrents, firewall, antivirus can slow down app responsibility or even suspend it.\n</string>
    <string name="help_text_admin">There are two possibilities to connect with external TS3 server:\n1) as serveradmin - he has access to main Server and all VirtualServers running on it.\n2) as serverquery delegate.\n\nIf you are login as serveradmin leave a 0 in Port(optional).\nIf you are login as queryDelegate put port number in Port(optional) under which VirtualServer is running, for example: 9987.\n\nIf you leave a 0 in Port(optional), you declare that you are serveradmin, and after connect, there will show a list with available VirtualServers to connect.\nChanging Port(optional) mean that you are queryDelegate with admin privilages and you can connect ONLY to virtual server with specific port address.\n\nOnly ServerAdmin has possibility to stop and start virtual server.\n\nExamples...\n\n1)ServerAdmin\n\nServer Address: 12.123.43.222\nQuery port: 10011\nPort(optional): 0\nUsername: serveradmin\nPassword: xxxxxxxxxxx\n\n\n2)QueryDelegate:\n\nServer Address: 12.123.43.222\nQuery port: 10011\nPort(optional): 9987\nUsername: mynickname\nPassword: xxxxxxxxxx\n\n\nHow to create a ServerQuery Login?\nOn menu bar of your TS3 select Tools and ServerQuery Login.\nPut a custom login name and on the next step you will get password.\nGive this information to your admin or moderator or even client, if he has a need to control TS3 server by TSmobile app.\n\nIf you have any problems or you found errors just contact with me.\nYou can write review my app on GooglePlay or give me info what would you like to have in next updates.\n\nHave fun!</string>
    <string name="help_text_b">2) First of all run TS on your PC, connect to the selected server and go to the channel on which the conversation will be carried out. \n\nIn TS&apos;s configuration has to be enabled ClientQuery and TS control plugin. The above-mentioned options are enabled by default after installation the TS program. \nGo to Settings -&gt; Plugins:\n</string>
    <string name="help_text_c1">In Settings of ClientQuery is very important to check as enabled Open telnet Port for everyone. \n\nConfirm all changes and click on Reload All button.</string>
    <string name="help_text_c2">\n\nAfter that you are ready to push the Find button on mobile device and choose IP of your PC or Laptop where TS is running.</string>
    <string name="help_text_c3">\n\nQuestions?</string>
    <string name="hint_txt_chat">Type something...</string>
    <string name="hint_txt_help3">Configure TeamSpeak3 Client on your PC as shown below in instruction.\nYour PC must be connected to router by cable (Ethernet) or Wifi. Your mobile device must be connected to the same router as your PC (in this case only by WiFi). \nRun searching &quot;Find&quot;-button, to find TeamSpeak3 software running on any PC in your local area network. \nIf there is any results, try again with search few times, max 5 attempts, after that your configuration is wrong. Check it with instruction or with movie on Youtube.</string>
    <string name="hint_txt_help7">Remember! You cannot do this if you have no rights to configure your home router.\n\nFirst, check what is the IP address of your computer, for Windows OS run &quot;cmd&quot; then enter &quot;ipconfig&quot;, and save somewhere &quot;address IPv4&quot;, it will be something like: 192.168.1.110. \nSecond, check what is your public IP, for example use www.whatismyipaddress.com. It will be something like: 99.152.312.8. \nConnect by your PC to home router and setup the Port Range Forwarding. Protocol - [TCP], Port Range from - [25639] to - [25639], IP address - [Your local IP], enable this rule and save it. \n\nAfter all steps, use mobile app TSmobile and on the &quot;Client&quot; view, touch &quot;Use 3G&quot;-button (Top-Right corner). There will appear &quot;Add Your IP&quot;-button where you have to enter your public address IP. \nYour firewall software on PC need to gives you access to use port 25639 and has it unlocked. \n\nSoon there will be video on youtube with step by step configuration.</string>
    <string name="list_view_addressip">Addreess IP</string>
    <string name="list_view_channel_name">Channel Name</string>
    <string name="list_view_client_name">Client Nickname</string>
    <string name="list_view_country_name">PL</string>
    <string name="main_channel">Channel</string>
    <string name="main_channel_empty">Empty Channel</string>
    <string name="main_nickname">Nickname</string>
    <string name="main_ts_info_text">Receiving information from TS...</string>
    <string name="nav_bar_email">developer.dep@gmail.com</string>
    <string name="nav_bar_title_app">TSmobile</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
</resources>