<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res-auto" app:layout_width="match_parent" app:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="vertical" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_margin="@dimen/text_margin">
        <TextView app:textStyle="bold" app:gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/textHelp0" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="5dp" app:layout_marginBottom="20dp" app:text="Watch Step-by-step video guide with a comment how to configure TeamSpeak3 and how to properly use TSmobile app with WiFi or LTE connection." />
        <ImageView app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/play0" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginBottom="15dp" />
        <TextView app:textStyle="bold" app:gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:id="@+id/textHelp1" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="5dp" app:layout_marginBottom="20dp" app:text="I WANT TO USE HOME WIFI CONNECTION TO FIND MY LOCAL PC." />
        <TextView app:textStyle="bold" app:gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:id="@+id/textHelp2" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="5dp" app:text="How To:" />
        <TextView app:textStyle="UNKNOWN_DATA_0x0" app:gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:id="@+id/textHelp3" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginLeft="20dp" app:layout_marginTop="5dp" app:layout_marginBottom="20dp" app:text="@string/hint_txt_help3" />
        <TextView app:textStyle="bold" app:gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:id="@+id/textHelp4" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="5dp" app:text="Instruction:" />
        <ImageView app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/play_image" app:layout_width="wrap_content" app:layout_height="wrap_content" />
        <TextView app:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/textView7" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="5dp" app:layout_marginBottom="20dp" app:text="Play me to see how connect as Client..." />
        <TextView app:typeface="sans" app:textStyle="UNKNOWN_DATA_0x0" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/help_text_a" />
        <ImageView app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/help1" app:layout_width="wrap_content" app:layout_height="wrap_content" />
        <TextView app:typeface="sans" app:textStyle="UNKNOWN_DATA_0x0" app:id="@+id/textView2" app:focusable="false" app:layout_width="match_parent" app:layout_height="wrap_content" app:text="@string/help_text_ab" app:singleLine="false" app:textIsSelectable="false" />
        <TextView app:typeface="sans" app:textStyle="UNKNOWN_DATA_0x0" app:id="@+id/textView3" app:layout_width="match_parent" app:layout_height="wrap_content" app:text="@string/help_text_b" />
        <ImageView app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/help2" app:paddingBottom="10dp" app:layout_width="wrap_content" app:layout_height="wrap_content" />
        <ImageView app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/help3" app:paddingBottom="20dp" app:layout_width="wrap_content" app:layout_height="wrap_content" />
        <TextView app:typeface="sans" app:textStyle="bold" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/help_text_c1" />
        <TextView app:typeface="sans" app:textStyle="UNKNOWN_DATA_0x0" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/help_text_c2" />
        <TextView app:textStyle="bold" app:gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:id="@+id/textHelp5" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="50dp" app:layout_marginBottom="20dp" app:text="I WANT TO USE MOBILE 3G CONNECTION TO CONNECT WITH MY PC WHEN I AM FAR AWAY FROM MY HOME WIFI." />
        <TextView app:textStyle="bold" app:gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:id="@+id/textHelp6" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="5dp" app:text="How To:" />
        <TextView app:textStyle="UNKNOWN_DATA_0x0" app:gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:id="@+id/textHelp7" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginLeft="20dp" app:layout_marginTop="5dp" app:layout_marginBottom="20dp" app:text="@string/hint_txt_help7" />
        <TextView app:typeface="sans" app:textStyle="UNKNOWN_DATA_0x0" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/help_text_c3" />
        <ImageView app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/fb_img" app:clickable="true" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1401" />
        <TextView app:typeface="sans" app:textStyle="UNKNOWN_DATA_0x0" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="


" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
